--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
             <b>Student Registration System</b>
           </h2>
         </div>
+        <a
+          href="https://github.com/vishwas-khitolia/todo-List"
+          target="_blank"
+          class="btn btn-dark ms-auto">
+          <i class="fa-brands fa-github me-1"></i> GitHub
+        </a>
       </nav>
     </header>
 
