--- a/index.html
+++ b/index.html
@@ -1,28 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Page ke encoding aur responsive viewport ke meta tags -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Page Title -->
     <title>Student Registration System</title>
+
+    <!-- Bootstrap CSS CDN for responsive and styled layout -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet" />
+
+    <!-- Font Awesome for icons (edit/delete/github) -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+
+    <!-- Favicon icon from icons8 -->
     <link rel="icon" type="image/png" href="image/icon.png" />
 
+    <!-- External CSS file -->
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
+    <!-- Header/Navbar Section -->
     <header>
-      <!-- Navbar -->
       <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container justify-content-center">
+          <!-- Project Title centered in navbar -->
           <h2 class="mb-0 text-white text-center">
             <b>Student Registration System</b>
           </h2>
         </div>
+
+        <!-- GitHub button on right side of navbar (opens in new tab) -->
         <a
           href="https://github.com/vishwas-khitolia/todo-List"
           target="_blank"
@@ -32,13 +46,16 @@
       </nav>
     </header>
 
+    <!-- Main Container -->
     <div class="container my-5">
-      <!-- Form Section -->
+      <!-- Form Section: User inputs student data here -->
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto form-section">
           <form id="studentForm">
+            <!-- Hidden field to track which record is being edited -->
             <input type="hidden" id="editIndex" />
             <div class="row g-3">
+              <!-- Student Name input -->
               <div class="col-md-6">
                 <label for="name" class="form-label">Student Name:</label>
                 <input
@@ -48,6 +65,8 @@
                   placeholder="Enter full name"
                   required />
               </div>
+
+              <!-- Student ID input -->
               <div class="col-md-6">
                 <label for="studentId" class="form-label">Student ID:</label>
                 <input
@@ -57,6 +76,8 @@
                   placeholder="e.g. 1001"
                   required />
               </div>
+
+              <!-- Email input -->
               <div class="col-md-6">
                 <label for="email" class="form-label">Email ID:</label>
                 <input
@@ -66,6 +87,8 @@
                   placeholder="e.g. name@example.com"
                   required />
               </div>
+
+              <!-- Contact Number input -->
               <div class="col-md-6">
                 <label for="contact" class="form-label">Contact No:</label>
                 <input
@@ -75,6 +98,8 @@
                   placeholder="10-digit mobile number"
                   required />
               </div>
+
+              <!-- Address input -->
               <div class="col-12">
                 <label for="address" class="form-label">Address:</label>
                 <textarea
@@ -85,6 +110,8 @@
                   required></textarea>
               </div>
             </div>
+
+            <!-- Submit Button: Save or Update student info -->
             <div class="button">
               <input type="submit" value="Save/Update" />
             </div>
@@ -92,7 +119,7 @@
         </div>
       </div>
 
-      <!-- Table Section -->
+      <!-- Table Section: Displays all registered students -->
       <div class="table-responsive mt-5">
         <table class="table table-striped table-bordered text-center">
           <thead class="table-dark">
@@ -104,13 +131,16 @@
               <th>Contact</th>
               <th>Address</th>
               <th>Actions</th>
+              <!-- Edit/Delete actions -->
             </tr>
           </thead>
           <tbody id="studentTable"></tbody>
+          <!-- Table rows will be added here dynamically -->
         </table>
       </div>
     </div>
-    <!-- script -->
+
+    <!-- JavaScript logic for form handling, validations, localStorage -->
     <script src="script.js"></script>
   </body>
 </html>
